Fix word wrap for code (on small devices).

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -452,6 +452,9 @@ footer {
 div#article-pad {
   padding: 10px }
 
+code {
+  word-wrap: break-word; }
+
 code.code-scroll {
   overflow-x: scroll;
   word-wrap: normal }
